<resources>
    <string name="app_name">Ascenx nRF Mesh</string>
    <string name="feature_name">Ascenx Mesh Provisioner</string>
    <string name="title">@string/app_name</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="turn_on">On</string>
    <string name="turn_off">Off</string>
    <string name="title_led_state">LED</string>
    <string name="title_button_state">Button</string>
    <string name="state">On Off State:</string>
    <string name="button_pressed">PRESSED</string>
    <string name="button_released">RELEASED</string>
    <string name="button_unknown">UNKNOWN</string>
    <string name="led_summary">Toggle the switch to turn the LED 3 on or off.</string>
    <string name="button_summary">Press Button 1 on the dev kit.</string>
    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. <b>nRF Mesh Provisioner</b> will not use this information in any way.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>
    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>
    <string name="blinky_guide_title">CAN\'T SEE YOUR NODE?</string>
    <string name="blinky_guide_info">1. Make sure the DK is <b>turned on</b> and is connected to a power source using a micro USB cable or a coin cell is plugged in.
        \n\n2. Make sure the <b>relevant</b> firmware and SoftDevice are flashed.</string>
    <string name="blinky_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your Blinky is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="blinky_guide_location_action">Enable</string>
    <string name="state_scanning">Scanning…</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_discovering_services">Discovering services…</string>
    <string name="state_initializing">Initializing…</string>
    <string name="state_discovering_services_completed">%s ready</string>
    <string name="state_disconnecting">Disconnecting…</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_scanning_provisioned_node">Scanning for provisioned node %s…</string>
    <string name="state_scanning_provisioned_node_found">Provisioned node %s found…</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="provisioner_input_title">Input PIN</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="pin">pin</string>
    <string name="provisioner_input_summary">Please enter the code.</string>
    <string name="provisioning_complete">Provisioning Complete!</string>
    <string name="invalid_provisioning_capabilities">Invalid provisioning capabilities</string>
    <string name="sending_prov_invite">Sending provisioning invite…</string>
    <string name="prov_capabilities_received">Provisioning capabilities received…</string>
    <string name="sending_prov_start">Sending provisioning start…</string>
    <string name="sending_prov_public_key">Sending provisioning public key…</string>
    <string name="prov_public_key_received">Provisioning public key received…</string>
    <string name="prov_user_authentication_waiting">Waiting for user authentication input…</string>
    <string name="prov_user_authentication_entered">User authentication input entered</string>
    <string name="sending_prov_input_complete">Sending provisioning input complete…</string>
    <string name="sending_prov_confirmation">Sending provisioning confirmation…</string>
    <string name="prov_confirmation_received">Provisioning confirmation received…</string>
    <string name="sending_prov_random">Sending provisioning random…</string>
    <string name="prov_random_received">Provisioning random received…</string>
    <string name="sending_prov_data">Sending provisioning data…</string>
    <string name="prov_complete_received">Provisioning complete received…</string>
    <string name="prov_failed_received">Provisioning failed received…</string>
    <string name="sending_prov_composition_data_get">Sending composition data get…</string>
    <string name="prov_composition_data_status_received">Composition data status received…</string>
    <string name="prov_sending_app_key_add">Sending app key add</string>
    <string name="prov_app_key_status_received">App key status received…</string>
    <string name="prov_sending_block_acknowledgement">Sending block acknowledgement…</string>
    <string name="prov_block_acknowledgement_received">Block acknowledgement received…</string>
    <string name="prov_app_key_bind_status_received">App key bind status received…</string>
    <string name="provision_action">Provision</string>
    <string name="identify_action">Identify</string>
    <string name="ok">OK</string>
    <string name="global_settings">Global Settings</string>
    <string name="title_node_details">Node Details</string>
    <string name="node_name">Name</string>
    <string name="node_prov_timestamp">Provisioned Time</string>
    <string name="node_identifier">Node Identifier</string>
    <string name="node_unicast_address">Unicast Address</string>
    <string name="node_company_identifier">Company Identifier</string>
    <string name="node_product_identifier">Product Identifier</string>
    <string name="node_product_version">Product Version</string>
    <string name="node_vendor_identifier">Vendor Identifier</string>
    <string name="node_replay_protection_count">Replay Protection Count</string>
    <string name="node_features">Node Features</string>
    <string name="title_elements">Elements</string>
    <string name="title_node_element_details">Element Details</string>
    <string name="title_node_app_keys">Application Keys</string>
    <string name="generate_app_key">Generate app key</string>
    <string name="title_network_name">Network Name</string>
    <string name="summary_global_network_name">Network name</string>
    <string name="summary_network_name">Enter a network name</string>
    <string name="hint_global_network_name">Network Name</string>
    <string name="title_global_ttl">Global TTL</string>
    <string name="summary_global_ttl">Global TTL</string>
    <string name="summary_ttl">Enter a global TTL value.</string>
    <string name="hint_global_ttl">Global TTL</string>
    <string name="title_src_address">Source Address</string>
    <string name="summary_src_address">Source address</string>
    <string name="dialog_summary_src">Enter a unicast address that could be used as an address for the provisioner.</string>
    <string name="hint_src_address">Source Address</string>
    <string name="network_settings">Network Settings</string>
    <string name="summary_flags">Flags</string>
    <string name="summary_key">Key</string>
    <string name="summary_index">Key Index</string>
    <string name="summary_iv_index">IV Index</string>
    <string name="summary_unicast_address">Unicast Address</string>
    <string name="hint_pin">Pin</string>
    <string name="error_empty_pin">Error, pin cannot be empty!</string>
    <string name="title_node_name">Node name</string>
    <string name="summary_name">Name</string>
    <string name="name_rationale">This is a friendly name to be used to identify nodes by naming them</string>
    <string name="hint_node_name">Friendly name</string>
    <string name="title_generate_network_key">Network Key</string>
    <string name="summary_generate_network_key">Enter your own network key or click generate to create a new random network key.</string>
    <string name="hint_network_key">Network key</string>
    <string name="generate_network_key">Generate network key</string>
    <string name="error_empty_network_key">Network key cannot be empty!</string>
    <string name="error_invalid_network_key">Network key must be 16 bytes long!</string>
    <string name="title_key_index">Key Index</string>
    <string name="dialog_summary_key_index">Enter the network key index.</string>
    <string name="hint_key_index">Key index</string>
    <string name="generate_key_index">Generate key index</string>
    <string name="error_empty_key_index">Key index cannot be empty!</string>
    <string name="error_invalid_key_index">Key index must be 0 to 4095!</string>
    <string name="error_invalid_uint8">Error, value must be UINT8!</string>
    <string name="title_flags">Flags</string>
    <string name="dialog_summary_flags">Select flag types.</string>
    <string name="title_key_refresh_flag">Key Refresh Flag</string>
    <string name="key_refresh_phase_0">Key Refresh Phase 0</string>
    <string name="key_refresh_phase_2">Key Refresh Phase 2</string>
    <string name="title_iv_update_flag">IV Update Flag</string>
    <string name="normal_operation">Normal operation</string>
    <string name="iv_update_active">IV Update active</string>
    <string name="title_iv_index">IV Index</string>
    <string name="dialog_summary_iv_index">Enter an IV Index value to be shared by all nodes in the mesh network.</string>
    <string name="hint_iv_index">IV Index</string>
    <string name="error_empty_iv_index">IV Index cannot be empty!</string>
    <string name="error_invalid_iv_index">IV Index must be 0 to 4294967295!</string>
    <string name="title_unicast_address">Unicast Address</string>
    <string name="dialog_summary_unicast_address">Enter a unicast address for the node.</string>
    <string name="hint_unicast_address">Unicast address</string>
    <string name="error_empty_unicast_address">Unicast Address cannot be empty!</string>
    <string name="configure">Configure</string>
    <string name="node_id">Node ID: %d</string>
    <string name="network">Network</string>
    <string name="action_settings">Settings</string>
    <string name="action_scanner">Scanner</string>
    <string name="action_user">User</string>
    <string name="no_networks_configured_title">NO NETWORKS CONFIGURED</string>
    <string name="no_networks_configured_rationale">In order to configure a network start by scanning, provisioning and then configuring the device from the scanner tab.</string>
    <string name="error_invalid_unicast_address">Unicast Address must be between 0 and 32767!</string>
    <string name="title_manage_app_keys">Manage App Keys</string>
    <string name="title_select_app_key">Select App Key</string>
    <string name="title_app_key">App Key</string>
    <string name="summary_app_key">App Key</string>
    <string name="summary_app_keys">App Keys</string>
    <string name="app_key_count">%d keys</string>
    <string name="hint_app_key">App key</string>
    <string name="no_app_keys_title">NO ADDED APP KEYS</string>
    <string name="no_app_keys_rationale">App keys are required in order to configure a UnprovisionedMeshNode after provisioning has been completed. Please click on the add button to add an app key </string>
    <string name="app_key_deleted">App key deleted.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_email">Log in</string>
    <string name="action_sign_in_facebook">Log in with Facebook</string>
    <string name="action_sign_in_google">Log in with Google</string>
    <string name="prompt_signup">No account yet? Create one</string>
</resources>